[tool.poetry]
name = "news"
version = "0.1.0"
description = ""
authors = ["pnoryk <pnoryk@wiseweb.by>"]

[tool.poetry.dependencies]
python = "^3.9.0"
Django = "^3.1.5"
black = "^20.8b1"
Pillow = "^8.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | frontend
    | _build
    | buck-out
    | build
    | dist
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
  | .*/migrations/.*
)
'''